homework/5.kubernetes-network/deloyment-pg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-postgres
  namespace: l5
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-postgres
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: postgres-pvc
          mountPath: /var/lib/postgresql/data/
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      volumes:
      - name: postgres-pvc
        persistentVolumeClaim:
          claimName: postgres-pvc

...
