homework/5.kubernetes-network/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: l5
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: l5
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
...
